# sudo-cli

./: .gitignore  GITHUB_REPO.md  HARD_TRUTH_REPORT.md  README.md  pyproject.toml
sudo/: __init__.py  __main__.py  cli.py
sudo/commands/: chat.py  find.py  grep.py  provider.py  setup.py  status.py
sudo/core/: config.py  encrypted_config.py  mcp.py  memory.py  plugins.py  provider.py  session.py  skills.py  telegram.py  token_counter.py  tools.py
sudo/core/sync/: __init__.py  conflict.py  engine.py  gcs_client.py  git_backup.py  registry.py  scanner.py  sentinel.json  sentinel.py  state.py
sudo/mcp_servers/: gcs_mcp_server.py
sudo/utils/: banner.py  constants.py  output.py
tests/: test_chat.py  test_config.py  test_grep.py  test_mcp.py  test_memory.py  test_output.py  test_plugins.py  test_plugins_dedup.py  test_provider.py  test_provider_validation.py  test_session.py  test_session_lazy.py  test_skills.py  test_sync.py  test_telegram.py  test_tools.py  test_tools_danger.py
