[project]
name = "sudo"
version = "0.1.0"
description = "AI coding assistant for Android Termux"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
sudo = "sudo.cli:main"
sudo-cli = "sudo.cli:main"
cli = "sudo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sudo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
